cmake_minimum_required(VERSION 3.29)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp
    05.cpp
    11.cpp
    14.cpp
    15.cpp
    20.cpp
    22.cpp
    32.cpp
    33.cpp
    35.cpp
    36.cpp
    37.cpp
    38.cpp
    39.cpp
    "40(atm).cpp"
    41.cpp
    42.cpp
    44.cpp
    47.cpp
    51.cpp)
